force-app/main/default/objects/MV_Room__c/MV_Room__c.object-meta.xml
<CustomObject>
    <description>Rooms available in the Hotel.</description>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>
 