force-app/main/default/objects/MV_Room__c/fields/MV_FLG_AirCondition__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_AirCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicates if the room has air condition.</description>
    <label>Air Condition</label>
    <type>Checkbox</type>
</CustomField>