force-app/main/default/objects/MV_Room__c/fields/MV_FLG_Available__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if a room is ready to book.</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>