force-app/main/default/objects/MV_Room__c/fields/MV_FLG_Jacuzzi__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_Jacuzzi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if the room has jacuzzi.</description>
    <label>Jacuzzi</label>
    <type>Checkbox</type>
</CustomField>