force-app/main/default/objects/MV_Room__c/fields/MV_FLG_MiniBar__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_MiniBar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if the room has mini bar.</description>
    <label>Mini Bar</label>
    <type>Checkbox</type>
</CustomField>