force-app/main/default/objects/MV_Room__c/fields/MV_FLG_Occupied__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_Occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if the room is occupied.</description>
    <label>Occupied</label>
    <type>Checkbox</type>
</CustomField>