force-app/main/default/objects/MV_Room__c/fields/MV_FLG_ServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>MV_FLG_ServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if the room required service</description>
    <label>Service Required</label>
    <type>Checkbox</type>
</CustomField>