force-app/main/default/objects/MV_Room__c/fields/MV_MDR_Hotel__c.field-meta.xml
<CustomField>
    <fullName>MV_MDR_Hotel__c</fullName>
    <description>Master Hotel record.</description>
    <label>Hotel</label>
    <referenceTo>MV_Hotel__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>