force-app/main/default/objects/MV_Room__c/fields/MV_NUM_MaxNumberGuests__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_MaxNumberGuests__c</fullName>
    <description>Field to indicate the maximum number of guests in this room.</description>
    <label>Max Number of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>