force-app/main/default/objects/MV_Room__c/fields/MV_NUM_RoomNumber__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_RoomNumber__c</fullName>
    <description>Field to indicate the room number.</description>
    <label>Room Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>