force-app/main/default/objects/MV_Room__c/fields/MV_SEL_Type__c.field-meta.xml
<CustomField>
    <fullName>MV_SEL_Type__c</fullName>
    <description>Field to indicate room type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MV_Core_RoomType</valueSetName>
    </valueSet>
</CustomField>