force-app/main/default/objects/MV_Room__c/fields/MV_URL_Photo__c.field-meta.xml
<CustomField>
    <fullName>MV_URL_Photo__c</fullName>
    <description>Field to show the photo of the room.</description>
    <label>Photo</label>
    <type>Url</type>
</CustomField>